# work-hour-calculator

./: .gitignore  APK_BUILD_STATUS.md  APK_BUILD_SUCCESS.md  APK_FINAL_CONCLUSION.md  APK_QUICK_BUILD.md  APK_TROUBLESHOOTING.md  BEEWARE_GUIDE.md  DOCKER_APK_BUILD.md  FINAL_SUMMARY.md  GITHUB_PUSH.md  GITHUB_SUCCESS.md  KIVY_BUILD_GUIDE.md  LICENSE  MOBILE_BUILD.md  ONLINE_APK_BUILD.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  UPLOAD_GUIDE.md  build_exe.py  build_kivy_apk.bat  buildozer.spec  create_release.bat  demo.py  generate_icon.py  main.py  main_android.py  main_cli.py  main_gui.py  push_guide.md  push_to_github.bat  pyproject.toml  release_notes.md  requirements.txt  run.py  web_app.py  工时计算器.spec
.codeartsdoer/skills/managing-sdd-design-markdown/: design-principles.md  design_template.md
.codeartsdoer/skills/managing-sdd-spec-markdown/: ears-format.md  spec_template.md
.github/workflows/: build-apk-action.yml  build-apk-debug.yml  build-apk-direct.yml  build-apk-docker.yml  build-apk-final.yml  build-apk-safe.yml  build-apk-stable.yml  build-apk.yml  build-beeware.yml
android-app/: README.md  build.gradle  local.properties  settings.gradle
android-app/app/: build.gradle
android-app/app/src/main/: AndroidManifest.xml
src/workhourcalculator/: __init__.py  app.py
templates/: add.html  base.html  edit.html  index.html  records.html  statistics.html
work_hour_calculator/: __init__.py  cli.py  config.py  data_manager.py  exceptions.py  main.py  models.py  report_generator.py  utils.py  work_calculator.py
work_hour_calculator/tests/: test_basic.py
(+22 files in other folders)
